Update website styling and add menu mockup

--- a/src/index.html
+++ b/src/index.html
@@ -7,21 +7,123 @@
   <meta name="description" content="<%= htmlWebpackPlugin.options.metaDesc %>" />
 </head>
 <body>
-    <header class="logo-wrapper">
-      <div class="logo-image"></div>
-      <div class="logo-title-wrapper">
-        <h1 class="logo-title">O'NEAL's</h1>
-        <h2 class="logo-subtitle">grilling the world</h2>
-      </div>
-    </header>
-    <nav class="navmenu-wrapper">
-      <button class="navmenu">PHILOSOPHY</button>
-      <button class="navmenu">MENU</button>
-      <button class="navmenu">MEDIA</button>
-      <button class="navmenu">CONTACT</button>
-    </nav>
-    <div id="content-wrapper">
-    
+  <header class="logo-wrapper">
+    <div class="logo-image"></div>
+    <div class="logo-title-wrapper">
+      <h1 class="logo-title">O'NEAL's</h1>
+      <h2 class="logo-subtitle">LAST WORD IN HUMAN EXCESS</h2>
     </div>
+    <div class="logo-quote">
+      'Just to eat what the animal needs to survive. That's so f****d up.
+      They need their eyes!'<br>
+      -Patrice O'Neal
+    </div>
+  </header>
+  <nav class="nav-tab-wrapper">
+    <button class="nav-tab">HOME</button>
+    <button class="nav-tab">MENU</button>
+    <button class="nav-tab">MEDIA</button>
+    <button class="nav-tab">BOOKING</button>
+  </nav>
+  <div class="content-wrapper">
+    <div class="menu-wrapper">
+      <div class="course-card">
+        <div class="course">APERITIFS</div>
+        <div class="menu-item">
+          <h3 class="menu-item-name">
+            HUMMINGBIRD PATE
+          </h3>
+          <p class="menu-item-info">
+            Smallest of all avians, the critically endangered Hummingbird
+            holds very little meat on its own. Scores must be caught
+            before they are enjoyed as a rich, creamy spread on a melba toast.
+          </p>
+        </div>
+        <div class="menu-item">
+          <h3 class="menu-item-name">
+            GIRAFFE NECK GYRO
+          </h3>
+          <p class="menu-item-info">
+            Cheetahs need their heels to hunt and we're just taking it.<br>
+            The rest of the animal? Useless.
+          </p>
+        </div>
+      </div>
+      
+      <div class="course-card">
+        <div class="course">MAIN COURSES</div>
+        <div class="menu-item">
+          <h3 class="menu-item-name">
+            GORILLA BICEPS
+          </h3>
+          <p class="menu-item-info">
+            Cheetahs need their heels to hunt and we're just taking it.<br>
+            The rest of the animal? Useless.
+          </p>
+        </div>
+        <div class="menu-item">
+          <h3 class="menu-item-name">
+            STUFFED WHALE BLOWHOLE
+          </h3>
+          <p class="menu-item-info">
+            Cheetahs need their heels to hunt and we're just taking it.<br>
+            The rest of the animal? Useless.
+          </p>
+        </div>
+      </div>
+      <div class="course-card">
+        <div class="course">SOUPS</div>
+        <div class="menu-item">
+          <h3 class="menu-item-name">
+            LEPARD SPOT STEW
+          </h3>
+          <p class="menu-item-info">
+            Prized for its speed, cheetah is the undisputed champion sprinter<br>
+            It's heels 
+          </p>
+        </div>
+        <div class="menu-item">
+          <h3 class="menu-item-name">
+            CHEETAH HEEL BROTH
+          </h3>
+          <p class="menu-item-info">
+            Cheetahs need their heels to hunt and we're just taking it.<br>
+            The rest of the animal? Useless.
+          </p>
+        </div>
+      </div>
+      <div class="course-card">
+        <div class="course">DESSERTS</div>
+        <div class="menu-item">
+          <h3 class="menu-item-name">
+            BABY SEAL EYE ICECREAM
+          </h3>
+          <p class="menu-item-info">
+            Cheetahs need their heels to hunt and we're just taking it.<br>
+            The rest of the animal? Useless.
+          </p>
+        </div>
+        <div class="menu-item">
+          <h3 class="menu-item-name">
+            LEMUR PAW FLAN
+          </h3>
+          <p class="menu-item-info">
+            Cheetahs need their heels to hunt and we're just taking it.<br>
+            The rest of the animal? Useless.
+          </p>
+        </div>
+      </div>
+      <div class="course-card wine">
+        <div class="course">WINE</div>
+        <div class="menu-item">
+          <h3 class="menu-item-name">
+            SHIPWRECK WINE
+          </h3>
+          <p class="menu-item-info wine2">
+            We exclusively offer only vintages rescued from prewar era shipwrecks
+          </p>
+        </div>
+    </div>
+  </div>
 </body>
 </html>
