Create a transitioning background

--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,6 @@
       <h1 class="logo-title">O'NEAL's</h1>
       <h2 class="logo-subtitle">LAST WORD IN HUMAN EXCESS</h2>
     </div>
-    <div class="logo-quote">
-      'Just to eat what the animal needs to survive. That's so f****d up.
-      They need their eyes!'<br>
-      -Patrice O'Neal
-    </div>
   </header>
   <nav class="nav-tab-wrapper">
     <button class="nav-tab">HOME</button>
@@ -25,9 +20,8 @@
     <button class="nav-tab">MEDIA</button>
     <button class="nav-tab">BOOKING</button>
   </nav>
-  <div class="content-wrapper">
-    <div class="menu-wrapper">
-      <div class="course-card">
+  <div id="content">
+    <div class="course-card">
         <div class="course">APERITIFS</div>
         <div class="menu-item">
           <h3 class="menu-item-name">
@@ -49,7 +43,6 @@
           </p>
         </div>
       </div>
-      
       <div class="course-card">
         <div class="course">MAIN COURSES</div>
         <div class="menu-item">
@@ -113,17 +106,16 @@
           </p>
         </div>
       </div>
-      <div class="course-card wine">
+      <div class="course-card">
         <div class="course">WINE</div>
         <div class="menu-item">
           <h3 class="menu-item-name">
             SHIPWRECK WINE
           </h3>
-          <p class="menu-item-info wine2">
+          <p class="menu-item-info">
             We exclusively offer only vintages rescued from prewar era shipwrecks
           </p>
         </div>
-    </div>
   </div>
 </body>
 </html>
