Add dynamic content for the Menu page

--- a/src/index.html
+++ b/src/index.html
@@ -15,107 +15,13 @@
     </div>
   </header>
   <nav class="nav-tab-wrapper">
-    <button class="nav-tab">HOME</button>
-    <button class="nav-tab">MENU</button>
-    <button class="nav-tab">MEDIA</button>
-    <button class="nav-tab">BOOKING</button>
+    <button class="nav-tab home">HOME</button>
+    <button class="nav-tab menu">MENU</button>
+    <button class="nav-tab media">MEDIA</button>
+    <button class="nav-tab book">BOOKING</button>
   </nav>
   <div id="content">
-    <div class="course-card">
-        <div class="course">APERITIFS</div>
-        <div class="menu-item">
-          <h3 class="menu-item-name">
-            HUMMINGBIRD PATE
-          </h3>
-          <p class="menu-item-info">
-            Smallest of all avians, the critically endangered Hummingbird
-            holds very little meat on its own. Scores must be caught
-            before they are enjoyed as a rich, creamy spread on a melba toast.
-          </p>
-        </div>
-        <div class="menu-item">
-          <h3 class="menu-item-name">
-            GIRAFFE NECK GYRO
-          </h3>
-          <p class="menu-item-info">
-            Cheetahs need their heels to hunt and we're just taking it.<br>
-            The rest of the animal? Useless.
-          </p>
-        </div>
-      </div>
-      <div class="course-card">
-        <div class="course">MAIN COURSES</div>
-        <div class="menu-item">
-          <h3 class="menu-item-name">
-            GORILLA BICEPS
-          </h3>
-          <p class="menu-item-info">
-            Cheetahs need their heels to hunt and we're just taking it.<br>
-            The rest of the animal? Useless.
-          </p>
-        </div>
-        <div class="menu-item">
-          <h3 class="menu-item-name">
-            STUFFED WHALE BLOWHOLE
-          </h3>
-          <p class="menu-item-info">
-            Cheetahs need their heels to hunt and we're just taking it.<br>
-            The rest of the animal? Useless.
-          </p>
-        </div>
-      </div>
-      <div class="course-card">
-        <div class="course">SOUPS</div>
-        <div class="menu-item">
-          <h3 class="menu-item-name">
-            LEPARD SPOT STEW
-          </h3>
-          <p class="menu-item-info">
-            Prized for its speed, cheetah is the undisputed champion sprinter<br>
-            It's heels 
-          </p>
-        </div>
-        <div class="menu-item">
-          <h3 class="menu-item-name">
-            CHEETAH HEEL BROTH
-          </h3>
-          <p class="menu-item-info">
-            Cheetahs need their heels to hunt and we're just taking it.<br>
-            The rest of the animal? Useless.
-          </p>
-        </div>
-      </div>
-      <div class="course-card">
-        <div class="course">DESSERTS</div>
-        <div class="menu-item">
-          <h3 class="menu-item-name">
-            BABY SEAL EYE ICECREAM
-          </h3>
-          <p class="menu-item-info">
-            Cheetahs need their heels to hunt and we're just taking it.<br>
-            The rest of the animal? Useless.
-          </p>
-        </div>
-        <div class="menu-item">
-          <h3 class="menu-item-name">
-            LEMUR PAW FLAN
-          </h3>
-          <p class="menu-item-info">
-            Cheetahs need their heels to hunt and we're just taking it.<br>
-            The rest of the animal? Useless.
-          </p>
-        </div>
-      </div>
-      <div class="course-card">
-        <div class="course">WINE</div>
-        <div class="menu-item">
-          <h3 class="menu-item-name">
-            SHIPWRECK WINE
-          </h3>
-          <p class="menu-item-info">
-            We exclusively offer only vintages rescued from prewar era shipwrecks
-          </p>
-        </div>
-  </div>
+    
+  </div>  
 </body>
 </html>
