--- a/src/index.html
+++ b/src/index.html
@@ -11,17 +11,23 @@
     <div class="logo-image"></div>
     <div class="logo-title-wrapper">
       <h1 class="logo-title">O'NEAL's</h1>
-      <h2 class="logo-subtitle">LAST WORD IN HUMAN EXCESS</h2>
+      <div class="michelin-stars"></div>
+      <!-- <p class="logo-subtitle">EXCEED THE EXCESS</p> -->
     </div>
   </header>
   <nav class="nav-tab-wrapper">
-    <button class="nav-tab home">HOME</button>
+    <button class="nav-tab home">MISSION</button>
     <button class="nav-tab menu">MENU</button>
-    <button class="nav-tab media">MEDIA</button>
-    <button class="nav-tab book">BOOKING</button>
+    <button class="nav-tab media">O'NEAL</button>
+    <button class="nav-tab book">BOOKINGS</button>
   </nav>
   <div id="content">
-    
+    <div class="home-wrapper">
+      <h2>
+        Just to take what the animal needs to survive. <br>
+        That's so f****d up. They need their eyes!
+      </h2>
+      <video src=""></video>
   </div>  
 </body>
 </html>
