--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,8 @@
   <nav class="nav-tab-wrapper">
     <button class="nav-tab home">MISSION</button>
     <button class="nav-tab menu">MENU</button>
-    <button class="nav-tab media">O'NEAL</button>
     <button class="nav-tab book">BOOKINGS</button>
+    <button class="nav-tab media">O'NEAL</button>
   </nav>
   <div id="content">
     <div class="home-wrapper">
@@ -27,7 +27,12 @@
         Just to take what the animal needs to survive. <br>
         That's so f****d up. They need their eyes!
       </h2>
-      <video src=""></video>
+      <h3>PATRICE O'NEAL<br>1969 - 2011</h3>
+      <p>A New York native stand-up comedian, Patrice came to prominence for his guest roles on various comedy shows throughout the 00s. Armed with a sharp tongue, he rarely made fast friends, but those who got to know him well saw a man with a big heart and still miss him. The restaurant menu is inspired by one such guest appearance.</p>
+      <p>Disclaimer- video contains strong language</p>
+      <iframe width="500" height="280" src="https://www.youtube.com/embed/VikTiogGfLs" title="Patrice O&#39;Neal on O&amp;A - Eating Exotic Animals" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin">
+      </iframe>
+    </div>
   </div>  
 </body>
 </html>
