Add booking page content

--- a/src/index.html
+++ b/src/index.html
@@ -12,26 +12,26 @@
     <div class="logo-title-wrapper">
       <h1 class="logo-title">O'NEAL's</h1>
       <div class="michelin-stars"></div>
-      <!-- <p class="logo-subtitle">EXCEED THE EXCESS</p> -->
     </div>
   </header>
   <nav class="nav-tab-wrapper">
     <button class="nav-tab home">MISSION</button>
     <button class="nav-tab menu">MENU</button>
-    <button class="nav-tab book">BOOKINGS</button>
+    <button class="nav-tab book">BOOKING</button>
     <button class="nav-tab media">O'NEAL</button>
   </nav>
   <div id="content">
     <div class="home-wrapper">
-      <h2>
-        Just to take what the animal needs to survive. <br>
-        That's so f****d up. They need their eyes!
-      </h2>
-      <h3>PATRICE O'NEAL<br>1969 - 2011</h3>
-      <p>A New York native stand-up comedian, Patrice came to prominence for his guest roles on various comedy shows throughout the 00s. Armed with a sharp tongue, he rarely made fast friends, but those who got to know him well saw a man with a big heart and still miss him. The restaurant menu is inspired by one such guest appearance.</p>
-      <p>Disclaimer- video contains strong language</p>
-      <iframe width="500" height="280" src="https://www.youtube.com/embed/VikTiogGfLs" title="Patrice O&#39;Neal on O&amp;A - Eating Exotic Animals" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin">
-      </iframe>
+      <h3>DARE TO EXCEED THE EXCESS</h3>
+      <h2>O'NEAL'S<br>
+      Royal Venue<br>
+      THE LINE, Neom<br>
+      Saudi Arabia<br>
+      +966 666 666 669</h2>
+      <p>We are fully booked 5 years ahead. Inquire to become a bidder
+      in our monthly auction for new openings. All reservations are
+      fully paid in advance and non-refundable. <span>Your anonimity is guaranteed.</span>
+      </p>
     </div>
   </div>  
 </body>
