Add background preload functionality

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
     <button class="nav-tab media">O'NEAL</button>
   </nav>
   <div id="content">
-  </div>  
+  </div> 
+  <div class="preload"></div>
 </body>
 </html>
